--- a/file2.html
+++ b/file2.html
@@ -36,7 +36,8 @@
             <label for="field2" class="lead">Рекламная рассылка</label>
             <input id="field2" class="form-check-input" type="checkbox"><br>
             <label for="field3" class="lead">Пароль</label><br>
-            <input id="field3" class="form-control form-control-sm" type="password">
+            <input id="field3" class="form-control form-control-sm" type="password"><br>
+            <input type="button" value="Отправить">
         </form>
     </body>
 </html>
